--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,7 +6,7 @@ workflows:
         environment:
           vars:
             XCODE_WORKSPACE: "VisionCameraExample.xcworkspace" # <-- Put the name of your Xcode workspace here
-            XCODE_SCHEME: "CodemagicSample" # <-- Put the name of your Xcode scheme here
+            XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
             APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
           node: v16.11.1
           xcode: latest
