--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,28 +1,22 @@
-workflows: 
-  react-native-ios:
+workflows:
+    react-native-ios:
         name: React Native iOS
         max_build_duration: 120
-        instance_type: mac_mini_m1
+        instance_type: mac_pro
         environment:
-          vars:
-            XCODE_WORKSPACE: "VisionCameraExample.xcworkspace" # <-- Put the name of your Xcode workspace here
-            XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
-            APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
-          node: v16.11.1
-          xcode: latest
+            vars:
+                XCODE_WORKSPACE: "ios/VisionCameraExample.xcworkspace" # <-- Put the name of your Xcode workspace here
+                XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
+            node: v19.2.0
+            xcode: 14.1
         scripts:
             - name: Install npm dependencies
               script: |
                 npm install
-            - name: Set Info.plist values
+            - name: Build ipa for distribution
               script: |
-                # This allows publishing without manually answering the question about encryption 
-                PLIST=$CM_BUILD_DIR/$XCODE_SCHEME/Info.plist
-                PLIST_BUDDY=/usr/libexec/PlistBuddy
-                $PLIST_BUDDY -c "Add :ITSAppUsesNonExemptEncryption bool false" $PLIST
-
+                xcodebuild build -workspace "$XCODE_WORKSPACE" -scheme "$XCODE_SCHEME" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13 Pro,OS=14.5' -configuration Debug CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO 
         artifacts:
-          - build/ios/ipa/*.ipa
-          - /tmp/xcodebuild_logs/*.log
-          - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
-          - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+            - /tmp/xcodebuild_logs/*.log
+            - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+            - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
