--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
     react-native-ios:
         name: React Native iOS
         max_build_duration: 120
-        instance_type: mac_pro
+        instance_type: mac_mini
         environment:
             vars:
                 XCODE_WORKSPACE: "ios/VisionCameraExample.xcworkspace" # <-- Put the name of your Xcode workspace here
@@ -13,9 +13,9 @@ workflows:
             - name: Install npm dependencies
               script: |
                 npm install
-            #- name: Build ipa for distribution
-            #  script: |
-            #    xcodebuild build -workspace "$XCODE_WORKSPACE" -scheme "$XCODE_SCHEME" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13 Pro,OS=14.5' -configuration Debug CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO 
+            - name: Build ipa for distribution
+              script: |
+                xcodebuild build -workspace "$XCODE_WORKSPACE" -scheme "$XCODE_SCHEME" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13 Pro,OS=14.5' -configuration Debug CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO 
         artifacts:
             - /tmp/xcodebuild_logs/*.log
             - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
