--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,19 +1,50 @@
 workflows:
     react-native-ios:
         name: React Native iOS
-        instance_type: mac_mini
+        max_build_duration: 120
+        instance_type: mac_mini_m1
+        integrations:
+          app_store_connect: codemagic
         environment:
-            vars:
-                XCODE_WORKSPACE: "ios/VisionCameraExample.xcworkspace" # <-- Put the name of your Xcode workspace here
-                XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
-            node: latest
-            xcode: 13
+          ios_signing:
+            distribution_type: app_store
+            bundle_identifier: io.codemagic.sample.reactnative
+          vars:
+            XCODE_WORKSPACE: "ios/VisionCameraExample" # <-- Put the name of your Xcode workspace here
+            XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
+            APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
+          node: latest
+          xcode: latest
+          cocoapods: default
         scripts:
             - name: Install npm dependencies
               script: |
                 npm install
+            - name: Set Info.plist values
+              script: |
+                # This allows publishing without manually answering the question about encryption 
+                PLIST=$CM_BUILD_DIR/$XCODE_SCHEME/Info.plist
+                PLIST_BUDDY=/usr/libexec/PlistBuddy
+                $PLIST_BUDDY -c "Add :ITSAppUsesNonExemptEncryption bool false" $PLIST
+            - name: Set up code signing settings on Xcode project
+              script: |
+                xcode-project use-profiles --warn-only
+            - name: Increment build number
+              script: |
+                #!/bin/sh
+                set -e
+                set -x
+                cd $CM_BUILD_DIR/ios
+                LATEST_BUILD_NUMBER=$(app-store-connect get-latest-app-store-build-number "$APP_ID")
+                agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
             - name: Build ipa for distribution
+              script: |
+                xcode-project build-ipa \
+                  --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
+                  --scheme "$XCODE_SCHEME"
         artifacts:
-          #- /tmp/xcodebuild_logs/*.log
-          #- $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
-          #- $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+            - build/ios/ipa/*.ipa
+            - /tmp/xcodebuild_logs/*.log
+            - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+            - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+        
