--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,7 +6,7 @@ workflows:
         environment:
           vars:
             XCODE_WORKSPACE: "ios/VisionCameraExample" # <-- Put the name of your Xcode workspace here
-            XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
+            XCODE_SCHEME: "ios/VisionCameraExample/xcshareddata/VisionCameraExample" # <-- Put the name of your Xcode scheme here
             APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
           node: latest
           xcode: latest
