--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
         instance_type: mac_mini_m1
         environment:
           vars:
-            XCODE_WORKSPACE: "ios/VisionCameraExample" # <-- Put the name of your Xcode workspace here
+            XCODE_WORKSPACE: "example/ios/VisionCameraExample" # <-- Put the name of your Xcode workspace here
             XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
             APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
           node: latest
@@ -15,12 +15,6 @@ workflows:
             - name: Install npm dependencies
               script: |
                 npm install
-            - name: Set Info.plist values
-              script: |
-                # This allows publishing without manually answering the question about encryption 
-                PLIST=$CM_BUILD_DIR/$XCODE_SCHEME/Info.plist
-                PLIST_BUDDY=/usr/libexec/PlistBuddy
-                $PLIST_BUDDY -c "Add :ITSAppUsesNonExemptEncryption bool false" $PLIST
             - name: Set up code signing settings on Xcode project
               script: |
                 xcode-project use-profiles --warn-only
