--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
         instance_type: mac_mini_m1
         environment:
           vars:
-            XCODE_WORKSPACE: "example/ios/VisionCameraExample" # <-- Put the name of your Xcode workspace here
+            XCODE_WORKSPACE: "VisionCameraExample" # <-- Put the name of your Xcode workspace here
             XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
             APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
           node: latest
