--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
         instance_type: mac_mini_m1
         environment:
           vars:
-            XCODE_WORKSPACE: "VisionCameraExample.xcworkspace" # <-- Put the name of your Xcode workspace here
+            XCODE_WORKSPACE: "example/ios/VisionCameraExample.xcworkspace" # <-- Put the name of your Xcode workspace here
             XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
             APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
           node: latest
@@ -21,7 +21,7 @@ workflows:
             - name: Build ipa for distribution
               script: |
                 xcode-project build-ipa \
-                  --workspace "example/ios/$XCODE_WORKSPACE" \
+                  --workspace "$XCODE_WORKSPACE" \
                   --scheme "$XCODE_SCHEME"
         artifacts:
             - build/ios/ipa/*.ipa
