--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -196,11 +196,9 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
-    implementation "com.facebook.react:react-native:+"  // From node_modules
-
-
+    //implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-
+    
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/"
         debugImplementation files(hermesPath + "hermes-debug.aar")
@@ -208,6 +206,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    
+    
+
 
     implementation project(':react-native-vision-camera')
     implementation "androidx.camera:camera-core:1.1.0-alpha08"
