--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -33,7 +33,7 @@ allprojects {
             url("$rootDir/../node_modules/react-native/android")
         }
         maven {
-            // Android JSC is installed from npm
+         //   // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
 
