--- a/example/codemagic.yaml
+++ b/example/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
         instance_type: mac_mini_m1
         environment:
           vars:
-            XCODE_WORKSPACE: "example/ios/VisionCameraExample" # <-- Put the name of your Xcode workspace here
+            XCODE_WORKSPACE: "ios/VisionCameraExample.xcworkspace" # <-- Put the name of your Xcode workspace here
             XCODE_SCHEME: "VisionCameraExample" # <-- Put the name of your Xcode scheme here
             APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
           node: latest
@@ -25,5 +25,7 @@ workflows:
                   --scheme "$XCODE_SCHEME"
         artifacts:
             - build/ios/ipa/*.ipa
-
+            - /tmp/xcodebuild_logs/*.log
+            - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+            - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
         
